--- a/templates/player.html
+++ b/templates/player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Karacool</title>
+  <title>KaraTube</title>
   <link rel="stylesheet" href="/static/css/player.css">
 </head>
 <body>
