--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
   <div class="topnav" id="myTopnav">
     <a href="#home" class="active">Home</a>
-    <a href="#news">News</a>
+    <a href="#search">Search</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
     <a href="javascript:void(0);" class="icon" onclick="topnavmenu()">
