--- a/templates/browse.html
+++ b/templates/browse.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div style="padding-left:16px">
-    <h2>Home Page</h2>
-    <p>Teste extensão de HTML.</p>
+    <h2>Browse</h2>
+    <p>Browse Teste extensão de HTML.</p>
 </div>
 {% endblock %}
