--- a/templates/queue.html
+++ b/templates/queue.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div style="padding-left:16px">
-    <h2>Home Page</h2>
-    <p>Teste extensão de HTML.</p>
+    <h2>Queue Page</h2>
+    <p>Queue Teste extensão de HTML.</p>
 </div>
 {% endblock %}
