--- a/templates/table.html
+++ b/templates/table.html
@@ -20,15 +20,11 @@ tr:nth-child(even){background-color: #f2f2f2}
 </head>
 <body>
 
-<h2>Responsive Table</h2>
-<p>If you have a table that is too wide, you can add a container element with overflow-x:auto around the table, and it will display a horizontal scroll bar when needed.</p>
-<p>Resize the browser window to see the effect. Try to remove the div element and see what happens to the table.</p>
-
 <div style="overflow-x:auto;">
   <table>
     <tr>
-      <td>Download</td>
-      <td>See on Youtube</td>
+      <td>Artista</td>
+      <td>Música</td>
     </tr>
     <tr>
       <td><img src="https://i.ytimg.com/vi/q0svmtzhhqc/hq720.jpg" height="100" width="100"></td>
