--- a/templates/youtube.html
+++ b/templates/youtube.html
@@ -28,13 +28,19 @@
 <div style="overflow-x:auto;">
     <table>
         <tr>
+            <td></td>
             <td>Video</td>
-            <td>Descrição</td>
+            <td>Description</td>
         </tr>
         {% for video in videos %}
         <tr>
             <td>
                 <a href="{{ url_for('youtubedl', artist=artist, song=song, id=video['id'], image=video['image'], description=video['description']) }}">
+                    <img src="{{ url_for('static', filename='images/icon-download.png') }}" height="24" width="24">
+                </a>               
+            </td>
+            <td>
+                <a href="https://www.youtube.com/watch?v={{ video['id'] }}">
                     <img src="{{ video['thumb'] }}" height="64" width="64">
                 </a>
             </td>
