--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,10 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
+    {% block headscript %}{% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="{{  url_for('static', filename='images/favicon.jpeg') }}">
     <style>
         body {
             margin: 10;
