--- a/templates/base.html
+++ b/templates/base.html
@@ -4,104 +4,41 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     {% block headscript %}{% endblock %}
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" href="{{  url_for('static', filename='images/favicon.jpeg') }}">
-    <style>
-        body {
-            margin: 10;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #333;
-            color: #f2f2f2;
-        }
-
-        .topnav {
-            overflow: hidden;
-            background-color: #000000;
-        }
-
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        .topnav a.active {
-            background-color: #04AA6D;
-            color: white;
-        }
-
-        .topnav .icon {
-            display: none;
-        }
-
-        @media screen and (max-width: 600px) {
-            .topnav a:not(:first-child) {
-                display: none;
-            }
-
-            .topnav a.icon {
-                float: right;
-                display: block;
-            }
-        }
-
-        @media screen and (max-width: 600px) {
-            .topnav.responsive {
-                position: relative;
-            }
-
-            .topnav.responsive .icon {
-                position: absolute;
-                right: 0;
-                top: 0;
-            }
-
-            .topnav.responsive a {
-                float: none;
-                display: block;
-                text-align: left;
-            }
-        }    
-    </style>
     {% block css %}{% endblock %}
 </head>
 
-<body>
-    <header>
-        <div class="topnav" id="myTopnav">
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('queue') }}">Queue</a>
-            <a href="{{ url_for('search') }}">Search</a>
-            <a href="{{ url_for('browse') }}">Browse</a>
-            <a href="javascript:void(0);" class="icon" onclick="menuFunction()">
-                <i class="fa fa-bars"></i>
+<body data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('index') }}">
+                <img src="{{  url_for('static', filename='images/karatube_logo.jpeg') }}" alt="Avatar Logo" style="width:40px;" class="rounded-pill">     
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('queue') }}">Queue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('search') }}">Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('browse') }}">Browse</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </header>
+    </nav>
     <main>
         {% block content %}{% endblock %}
     </main>
-    <script>
-        function menuFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
-
 </body>
 
 </html>
