--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>KaraTube</title>
     {% block headscript %}{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,10 +27,7 @@
                         <a class="nav-link" href="{{ url_for('queue') }}">Queue</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('search') }}">Search</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('browse') }}">Browse</a>
+                        <a class="nav-link" href="{{ url_for('library') }}">Library</a>
                     </li>
                 </ul>
             </div>
