--- a/templates/library.html
+++ b/templates/library.html
@@ -8,7 +8,7 @@
 <div class="container mt-3">
     <form action="{{ url_for('musicdb') }}" method="get">
     <div class="input-group">
-        <input type="text" class="form-control" id="search_string" placeholder="Artist + Music" name="search_string">
+        <input type="text" class="form-control" id="search_string" placeholder="Artist + Music" name="search_string" required>
         <button type="submit" class="btn btn-outline-primary">Search</button>
     </div>
     </form>
