--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body data-bs-theme="dark">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('home') }}">
                 <img src="{{  url_for('static', filename='images/karatube_logo.jpeg') }}" alt="Avatar Logo" style="width:40px;" class="rounded-pill">     
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
