--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,10 +1,14 @@
-{% extends "base.html" %}
-
+{% block css %}
+<style>
+  body {
+    background-image: url("{{  url_for('static', filename='images/karatube.jpg') }}");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+</style>
+{% endblock %}
 {% block content %}
-<h1 class="title">
-  Flask Login Example
-</h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
-</h2>
+<div class="column is-4 is-offset-4">
+
+</div>
 {% endblock %}
