--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -33,10 +33,13 @@
                     {% endif %}
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('queue') }}">Queue</a>
+                        <a class="nav-link" href="{{ url_for('main.queue') }}">Queue</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('library') }}">Library</a>
+                        <a class="nav-link" href="{{ url_for('main.library') }}">Library</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
