--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,14 +1,6 @@
-{% block css %}
-<style>
-  body {
-    background-image: url("{{  url_for('static', filename='images/karatube.jpg') }}");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-</style>
-{% endblock %}
-{% block content %}
-<div class="column is-4 is-offset-4">
+{% extends "base.html" %}
 
+{% block content %}
+<div class="container mt-3">
 </div>
 {% endblock %}
