--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 <div class="container mt-3">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="alert alert-danger">
+        {{ messages[0] }}.
+    </div>
+    {% endif %}
+    {% endwith %}
     <form method="POST" action="/login">
         <div class="mb-3 mt-3">
-            <label for="username">User:</label>
+            <label for="userid">User:</label>
             <input type="text" class="form-control" id="userid" name="userid" required>
         </div>
         <div class="mb-3">
