--- a/project/templates/queue.html
+++ b/project/templates/queue.html
@@ -1,8 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div style="padding-left:16px">
-    <h2>Queue Page</h2>
-    <p>Queue Teste extensão de HTML.</p>
+
+<div class="container mt-3">
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Singer</th>
+                <th>Music</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for lastfml in lastfm %}
+            <tr>
+                <td>
+                    <a href="{{ url_for('main.youtube', artist=lastfml['artist'], song=lastfml['song']) }}">
+                        <img src="{{ url_for('static', filename='images/icon-search.png') }}" height="24" width="24">
+                    </a>
+                </td>
+                <td>{{ lastfml["artist"] }}</td>
+                <td>{{ lastfml["song"] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
+
 {% endblock %}
