--- a/project/templates/youtube.html
+++ b/project/templates/youtube.html
@@ -20,7 +20,7 @@
                     </a>               
                 </td>
                 <td>
-                    <a href="https://www.youtube.com/watch?v={{ video['id'] }}">
+                    <a href="http://www.youtube.com/watch?v={{ video['id'] }}">
                         <img src="{{ video['thumb'] }}" height="64" width="64">
                     </a>
                 </td>
