--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,5 +2,14 @@
 
 {% block content %}
 <div class="container mt-3">
+    {% if user.name %}
+    <h3 class="title">
+        Hello, {{ current_user.name }} !
+    </h3>
+    {% else %}
+    <h3 class="title">
+        Login first !
+    </h3>    
+    {% endif %}
 </div>
 {% endblock %}
