--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -4,7 +4,7 @@
 <div class="container mt-3">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <div class="alert alert-danger">
+    <div class="alert {{ messages[1] }}">
         {{ messages[0] }}.
     </div>
     {% endif %}
@@ -17,6 +17,14 @@
         <div class="mb-3">
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <div class="mb-3">
+            <label for="roomid">Room:</label>
+            <input type="text" class="form-control" id="roomid" name="roomid" required>
+        </div>
+        <div class="mb-3">
+            <label for="roompass">Room Password:</label>
+            <input type="password" class="form-control" id="roompass" name="roompass" required>
         </div>
         <div class="mb-3">
             <label class="checkbox">
