--- a/project/static/css/player copy.css
+++ b/project/static/css/player copy.css
@@ -23,37 +23,45 @@ video {
 #overlay-singing {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 1%;  /* Center horizontally */
+  top: 2%;  /* Center vertically */
+  left: 4%;  /* Center horizontally */
+  transform: translate(-50%, -50%);  /* Adjust position based on offsets */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(38, 250, 119);  /* White text color */
+  padding: 10px;  /* Add padding for better readability */
   font-size: 20px;  /* Adjust font size as needed */
 }
 #overlay-now {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 7%;  /* Center horizontally */
+  top: 2%;  /* Center vertically */
+  left: 4%;  /* Center horizontally */
+  transform: translate(-50%, -50%);  /* Adjust position based on offsets */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(38, 250, 119);  /* White text color */
+  padding: 10px;  /* Add padding for better readability */
   font-size: 20px;  /* Adjust font size as needed */
 }
 #overlay-next {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 96%;  /* Center vertically */
-  left: 1%;  /* Center horizontally */
+  top: 2%;  /* Center vertically */
+  left: 60%;  /* Center horizontally */
+  transform: translate(-50%, -50%);  /* Adjust position based on offsets */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(248, 229, 59);  /* White text color */
+  padding: 10px;  /* Add padding for better readability */
   font-size: 20px;  /* Adjust font size as needed */
 }
 #overlay-queued {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 96%;  /* Center vertically */
-  left: 7%;  /* Center horizontally */
+  top: 2%;  /* Center vertically */
+  left: 60%;  /* Center horizontally */
+  transform: translate(-50%, -50%);  /* Adjust position based on offsets */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(248, 229, 59);  /* White text color */
+  padding: 10px;  /* Add padding for better readability */
   font-size: 20px;  /* Adjust font size as needed */
 }
 #navigation-bar {
