--- a/project/static/css/player.css
+++ b/project/static/css/player.css
@@ -41,8 +41,8 @@ video {
 #overlay-next {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 96%;  /* Center vertically */
-  left: 1%;  /* Center horizontally */
+  top: 1%;  /* Center vertically */
+  left: 55%;  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(248, 229, 59);  /* White text color */
   font-size: 20px;  /* Adjust font size as needed */
@@ -50,11 +50,19 @@ video {
 #overlay-queued {
   position: absolute;  /* Position overlay element on top */
   text-align: left;
-  top: 96%;  /* Center vertically */
-  left: 7%;  /* Center horizontally */
+  top: 1%;  /* Center vertically */
+  left: 62%;  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
   color: rgb(248, 229, 59);  /* White text color */
   font-size: 20px;  /* Adjust font size as needed */
+}
+#image {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #navigation-bar {
   display: none;
