--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/player.css') }}">
   <script>
     function getLatestInfo() {
-        $.ajax({
-            url: "/screenupdate",
-            success: function(data) {
-                $("#overlay-now").html(data.singer + ' - ' + data.song);
-                $("#overlay-queued").html(data.next_singer + ' - ' + data.next_song);
-            },
-            error: function(jqXHR, textStatus, errorThrown) {
-                console.error("Error:", textStatus, errorThrown);
-            }
-        });
+      $.ajax({
+        url: "/screenupdate",
+        success: function (data) {
+          $("#overlay-now").text(data.singer + ' - ' + data.song);
+          $("#overlay-queued").text(data.next_singer + ' - ' + data.next_song);
+        },
+        error: function (jqXHR, textStatus, errorThrown) {
+          console.error("Error:", textStatus, errorThrown);
+        }
+      });
     }
 
-    $(document).ready(function() {
-        getLatestInfo();  // Get initial info on page load
-        setInterval(getLatestInfo, 3000); // Check for updates every 3 seconds
+    $(document).ready(function () {
+      getLatestInfo();  // Get initial info on page load
+      setInterval(getLatestInfo, 3000); // Check for updates every 3 seconds
     });
-</script>
+  </script>
 </head>
 
 <body>
@@ -34,25 +34,33 @@
     <span id="overlay-now">{{ player_data.singer }} - {{ player_data.song }}</span>
     <span id="overlay-next">Next:</span>
     <span id="overlay-queued">{{ player_data.next_singer }} - {{ player_data.next_song }}</span>
+    <img id="image" src="/statis/images/karatube.jpg" alt="Post-video image">
 
     <script>
       const videoElement = document.getElementById("video");
+      const image = document.getElementById('image');
 
       videoElement.src = "{{ player_data.video_url }}";
       videoElement.load();
       videoElement.play();
 
       videoElement.addEventListener('ended', () => {
+        videoElement.style.display = 'none';
+        image.style.display = 'block';
         // Fetch the next video URL from the server using AJAX
         fetch('/playerdata')
           .then(response => response.json())
           .then(data => {
             $('#overlay-now').text(data.singer + ' - ' + data.song);
             $('#overlay-queued').text(data.next_singer + ' - ' + data.next_song);
-            videoElement.src = data.url;
-            videoElement.load();
-            videoElement.play();
+            if (data.url !== '') {
+              videoElement.src = data.url;
+              videoElement.load();
+              videoElement.play();
+            }
           });
+        videoElement.style.display = 'block';
+        image.style.display = 'none';
       });
     </script>
   </div>
