--- a/project/static/css/player.css
+++ b/project/static/css/player.css
@@ -1,69 +1,90 @@
-html {
-  overflow: hidden;
+* {
+  box-sizing: border-box;
 }
+
 body {
-  background-color: black;
-  overflow: hidden;
+  margin: 0;
+  font-family: Arial;
+  font-size: 17px;
 }
-.video-container {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  display: flex;
-  align-items: center;
-}      
-video {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+
+#video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
 }
+
 #overlay-singing {
-  position: absolute;  /* Position overlay element on top */
+  position: absolute;
+  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 1%;  /* Center horizontally */
-  background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
-  color: rgb(38, 250, 119);  /* White text color */
-  font-size: 20px;  /* Adjust font size as needed */
+  top: 0;
+  /* Center vertically */
+  left: 1%;
+  /* Center horizontally */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black background */
+  color: rgb(38, 250, 119);
+  /* White text color */
+  font-size: 20px;
+  /* Adjust font size as needed */
 }
+
 #overlay-now {
-  position: absolute;  /* Position overlay element on top */
+  position: absolute;
+  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 7%;  /* Center horizontally */
-  background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
-  color: rgb(38, 250, 119);  /* White text color */
-  font-size: 20px;  /* Adjust font size as needed */
+  top: 0;
+  /* Center vertically */
+  left: 7%;
+  /* Center horizontally */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black background */
+  color: rgb(38, 250, 119);
+  /* White text color */
+  font-size: 20px;
+  /* Adjust font size as needed */
 }
+
 #overlay-next {
-  position: absolute;  /* Position overlay element on top */
+  position: absolute;
+  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 55%;  /* Center horizontally */
-  background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
-  color: rgb(248, 229, 59);  /* White text color */
-  font-size: 20px;  /* Adjust font size as needed */
+  bottom: 0;
+  /* Center vertically */
+  left: 1%;
+  /* Center horizontally */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black background */
+  color: rgb(248, 229, 59);
+  /* White text color */
+  font-size: 20px;
+  /* Adjust font size as needed */
 }
+
 #overlay-queued {
-  position: absolute;  /* Position overlay element on top */
+  position: absolute;
+  /* Position overlay element on top */
   text-align: left;
-  top: 1%;  /* Center vertically */
-  left: 62%;  /* Center horizontally */
-  background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent black background */
-  color: rgb(248, 229, 59);  /* White text color */
-  font-size: 20px;  /* Adjust font size as needed */
+  bottom: 0;
+  /* Center vertically */
+  left: 7%;
+  /* Center horizontally */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black background */
+  color: rgb(248, 229, 59);
+  /* White text color */
+  font-size: 20px;
+  /* Adjust font size as needed */
 }
-#image {
-  display: none;
+
+#splashImage {
+  z-index: 3;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-#navigation-bar {
-  display: none;
 }
