--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon" href="{{  url_for('static', filename='images/favicon.jpeg') }}">
+    <link rel="icon" href="{{  url_for('static', filename='images/karatube_logo1.jpg') }}">
     {% block css %}{% endblock %}
 </head>
 
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('main.index') }}">
-                <img src="{{  url_for('static', filename='images/karatube_logo.jpeg') }}" alt="Avatar Logo" style="width:40px;" class="rounded-pill">     
+                <img src="{{  url_for('static', filename='images/karatube_logo1.jpg') }}" alt="Avatar Logo" style="width:40px;" class="rounded-pill">     
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
