--- a/project/static/css/player.css
+++ b/project/static/css/player.css
@@ -16,68 +16,54 @@ body {
   min-height: 100%;
 }
 
-#overlay-singing {
+#overlay-presents {
   position: absolute;
-  /* Position overlay element on top */
   text-align: left;
   top: 0;
-  /* Center vertically */
   left: 1%;
-  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);
-  /* Semi-transparent black background */
   color: rgb(38, 250, 119);
-  /* White text color */
   font-size: 20px;
-  /* Adjust font size as needed */
+  z-index: 999;
+}
+#overlay-singing {
+  position: absolute;
+  text-align: left;
+  top: 0;
+  left: 1%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgb(38, 250, 119);
+  font-size: 20px;
 }
 
 #overlay-now {
   position: absolute;
-  /* Position overlay element on top */
   text-align: left;
   top: 0;
-  /* Center vertically */
   left: 7%;
-  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);
-  /* Semi-transparent black background */
   color: rgb(38, 250, 119);
-  /* White text color */
   font-size: 20px;
-  /* Adjust font size as needed */
 }
 
 #overlay-next {
   position: absolute;
-  /* Position overlay element on top */
   text-align: left;
   bottom: 0;
-  /* Center vertically */
   left: 1%;
-  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);
-  /* Semi-transparent black background */
   color: rgb(248, 229, 59);
-  /* White text color */
   font-size: 20px;
-  /* Adjust font size as needed */
 }
 
 #overlay-queued {
   position: absolute;
-  /* Position overlay element on top */
   text-align: left;
   bottom: 0;
-  /* Center vertically */
   left: 7%;
-  /* Center horizontally */
   background-color: rgba(0, 0, 0, 0.5);
-  /* Semi-transparent black background */
   color: rgb(248, 229, 59);
-  /* White text color */
   font-size: 20px;
-  /* Adjust font size as needed */
 }
 
 #splashImage {
