--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -44,7 +44,7 @@
                     </li>
                     {% if current_user.admin == 'X' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.createroom') }}">Create Room</a>
+                        <a class="nav-link" href="{{ url_for('main.configuration') }}">Configuration</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
