--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -83,7 +83,7 @@
           procStep = 3;
           $("#overlay-presents").text(screenData.singer + ' - ' + screenData.song + ' - ' + screenData.artist);
           $("#overlay-presents").show();
-          $("#splashImage").hide();
+          $("#splashImage").show();
           $("#video").hide();
           $("#overlay-now").hide();
           $("#overlay-singing").hide();
